yamls/mediawiki-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: mediawiki
  name: mediawiki-netpol
spec:
  ingress:
  - ports:
    - port: 80
  podSelector:
    matchLabels:
      app: mediawiki
  policyTypes:
  - Ingress
